--- a/templates/misc/message.part.html
+++ b/templates/misc/message.part.html
@@ -4,7 +4,7 @@
 
 
 
-<article class="forum-message {% if message.is_useful %}helpful{% endif %}">
+<article class="topic-message {% if message.is_useful %}helpful{% endif %}">
     {% include "misc/message_user.html" with member=message.author %}
 
 
