--- a/templates/misc/message_form.html
+++ b/templates/misc/message_form.html
@@ -2,7 +2,7 @@
 
 
 
-<section class="content-wrapper forum-message">
+<section class="content-wrapper topic-message">
 	<form action="{{ form_action }}" method="post">
 		{% include "misc/message_user.html" with hide_metadata=True %}
 
