--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -28,6 +28,7 @@ $sprite2x: sprite-map("sprite@2x/*.png");
 $blue: #084561;
 $orange: #ff8c00;
 $header-hover: #396a81;
+$helpful: #e9f9dc;
 
 // Margins
 $modal-margin: 25px;
